--- a/app/styles/control/button.css
+++ b/app/styles/control/button.css
@@ -14,10 +14,13 @@ button:not(.control-size-square) svg {
   margin-right: 0.25rem;
 }
 
-button:not(:disabled):hover, button:not(:disabled):active,
-.button-link:not(:disabled):hover, .button-link:not(:disabled):active {
-  opacity: 1;
-  background-color: var(--color-control-hover-primary);
+@media (hover: hover) {
+
+  button:not(:disabled):hover, button:not(:disabled):active,
+  .button-link:not(:disabled):hover, .button-link:not(:disabled):active {
+    opacity: 1;
+    background-color: var(--color-control-hover-primary);
+  }
 }
 
 .button-link {
