--- a/app/styles/control/dropdown.css
+++ b/app/styles/control/dropdown.css
@@ -84,11 +84,12 @@
   text-align: start;
 }
 
-.dropdown-item:hover, .dropdown-item:focus, .dropdown-item:active, .dropdown-item-selected {
-  background-color: var(--color-control-hover);
-  color: var(--color-text-default);
+@media (hover: hover) {
+  .dropdown-item:hover, .dropdown-item:focus, .dropdown-item:active, .dropdown-item-selected {
+    background-color: var(--color-control-hover);
+    color: var(--color-text-default);
+  }
 }
-
 
 .dropdown-item:first-child {
   border-radius: var(--global-border-radius) var(--global-border-radius) 0px 0px;
