--- a/app/styles/text.css
+++ b/app/styles/text.css
@@ -1,3 +1,9 @@
+.title {
+  font-size: medium;
+  font-weight: bold;
+  color: var(--color-text-highlighted)
+}
+
 .subtitle, .subtitle b {
   font-size: small;
   color: var(--color-text-subtle);
@@ -7,8 +13,10 @@ a, a:visited {
   color: var(--color-text-link);
 }
 
-a:hover {
-  opacity: 0.8;
+@media(hover: hover) {
+  a:hover {
+    opacity: 0.8;
+  }
 }
 
 b {
